Refactor PathChecker
Summary: Split ```checkPaths``` into ``checkPaths`` `` checkFilePaths`` and ``checkDirPaths`` so each method can do its own check

Reviewed By: bobyangyf

shipit-source-id: 6d0326b6db22c18edcf5c46e955887f336bfd394